--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
+    "build:mac": "export CSC_IDENTITY_AUTO_DISCOVERY=false && electron-vite build && electron-builder --mac --arm64",
     "build:linux": "electron-vite build && electron-builder --linux"
+  },
+  "overrides": {
+    "node-gyp": "^10.0.0",
+    "@electron/rebuild": "^3.6.0"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
